--- a/DakLakCoffeeSupplyChain/package.json
+++ b/DakLakCoffeeSupplyChain/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
+    "motion": "^12.23.12",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "postcss-preset-env": "^10.2.4",
