--- a/DakLakCoffeeSupplyChain/.hintrc
+++ b/DakLakCoffeeSupplyChain/.hintrc
@@ -9,6 +9,12 @@
         "button-name": "off"
       }
     ],
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "axe/aria": [
+      "default",
+      {
+        "aria-valid-attr-value": "off"
+      }
+    ]
   }
 }
