--- a/DakLakCoffeeSupplyChain/package.json
+++ b/DakLakCoffeeSupplyChain/package.json
@@ -27,13 +27,13 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.12",
-    "next": "15.3.2",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "postcss-preset-env": "^10.2.4",
-    "react": "^19.0.0",
+    "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.8.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.6",
